dz5/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
  - port: 3000
    targetPort: 80
  selector:
    app: my-app
  type: ClusterIP
